<resources>
    <string name="app_name">Language Assistant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library">Thư viện</string>
    <string name="homepage">Trang chủ</string>
    <string name="community">Cộng đồng</string>
    <string name="personal">Cá nhân</string>
    <string name="continuePreLess">Tiếp tục bài học trước</string>
    <string name="worktoday">Hôm nay làm gì?</string>
    <string name="topic_expressions_questions">Topic:Expressions/Questions</string>
    <string name="Continue">Continue</string>
    <string name="topic">Topic</string>
    <string name="to_day">To Day</string>
    <string name="rank">Bảng Xếp Hạng</string>
    <string name="default_date">10/10/2022</string>
    <string name="default_top">TOP 1</string>
    <string name="Terminology_in_topic">Các thuật ngữ</string>
    <string name="Terms">Thuật Ngữ</string>
    <string name="Define">Định Nghĩa</string>
    <string name="search">Search</string>
    <string name="delete">Xóa</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="addToFolder">Thêm vào folder</string>
    <string name="publicString">Public</string>
    <string name="Save">Lưu</string>
    <string name="addFolder">Thêm Folder</string>
    <string name="titleFolder">Tên Folder</string>
    <string name="topicTitle">Tiêu đề</string>
    <string name="vocabu">Từ vựng</string>
    <string name="inputTitle">Nhập tiêu đề</string>
    <string name="historydid">Lịch sử làm bài</string>
    <string name="redo">Làm Lại</string>
    <string name="check">Kiểm tra</string>
    <string name="transcriptDescription">Chúc mừng bạn đã hoàn thành tốt bài thi</string>
    <string name="details">Chi tiết</string>
    <string name="oldPassword">"Nhập mật khẩu cũ "</string>
    <string name="birth">Ngày sinh</string>
    <string name="email">Email</string>
    <string name="status">Bài viết</string>
    <string name="resetpassword">Mật khẩu mới</string>
    <string name="logout">Đăng xuất</string>
    <string name="changepassword">Đổi mật khẩu</string>
    <string name="questionText">Câu hỏi</string>
    <string name="answerText">Câu trả lời</string>
    <string name="learnabout">Tìm Hiểu</string>
    <string name="hint">Gợi ý cho bạn</string>
    <string name="rankOfTopic">Bảng xếp hạng các topic được ưa chuộng nhất</string>
    <string name="practiceEveryDat">Luyện tập bài học hàng ngày</string>
    <string name="eleanFollowTopic">Học theo chủ đề</string>
    <string name="addToFolderTitle">Thêm vào thư mục</string>
    <string name="register">Đăng kí</string>
    <string name="login">Đăng Nhập</string>
    <string name="send">Gửi</string>
    <string name="forgotpassword">Quên mật khẩu?</string>
    <string name="option">Tùy chọn</string>
    <string name="searchVi">Tìm kiếm...</string>
    <string name="publicVi">Công khai</string>
</resources>