<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    >
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    app:cardCornerRadius="20dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    >
   <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="90dp"

            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:drawableLeft="@drawable/ic_edit"
                android:drawablePadding="50dp"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:drawableLeft="@drawable/ic_delete"
                android:drawablePadding="50dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAddIntoFolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:drawableLeft="@drawable/ic_add_into_folder"
                android:drawablePadding="50dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/addToFolder"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchPublicMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_community_small"
                android:drawablePadding="50dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/publicString"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
</androidx.cardview.widget.CardView>

</LinearLayout>