<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.iiex.languageassistant.viewmodels.MultipleChoiceFragViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.MultipleChoiceTranscriptFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textViewTitle"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginVertical="10dp"
                android:text="Title"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/transcriptDescription"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/inter_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/black"
                android:text="Tổng điểm"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/inter_bold"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textViewScore"
                android:text="100"
                android:textSize="32sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_bold"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:textColor="@color/blue_400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/black"
                android:text="@string/historydid"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/inter_bold"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/black_200_2"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/questionText"
                    style="@style/TextViewTitleRow" />

                <TextView
                    style="@style/TextViewTitleRow"
                    android:text="@string/answerText"
                   />
            </LinearLayout>

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </TableLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRedo"
                android:background="@drawable/style_round_btn_redo"
                android:text="@string/redo"
                android:textColor="@color/white"
                android:layout_width="105dp"
                android:textSize="10sp"
                android:fontFamily="@font/inter_bold"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:layout_height="30dp"/>
        </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>