<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.MainActivity">
    <data>

    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/logo" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:iconifiedByDefault="false"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    app:queryHint="@string/searchVi"
                    app:queryBackground="@color/transparent"
                    android:background="@drawable/style_round_edittextsearch" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/toolbar"
                android:background="#C3C3C3" />
            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:text="@string/continuePreLess"
                            android:textStyle="bold"
                            android:layout_marginVertical="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycleViewToDo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="20sp"
                            android:text="@string/worktoday"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_marginVertical="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            app:cardElevation="10dp"
                            android:layout_marginVertical="10dp"
                            android:layout_marginHorizontal="20dp"
                            app:cardMaxElevation="10dp"
                            app:cardCornerRadius="5dp"
                            android:layout_height="match_parent">
                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:background="@drawable/style_background_btn_off"
                                android:padding="10dp"
                                android:layout_height="wrap_content">
                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/buttonPractice"
                                    android:text="@string/practiceEveryDat"
                                    android:background="@color/transparent"
                                    android:textColor="@color/black"
                                    android:layout_weight="1"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"/>
                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:id="@+id/buttonImagePractice"
                                    android:layout_width="wrap_content"
                                    android:src="@drawable/ic_yellow_next"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            app:cardElevation="10dp"
                            android:layout_marginVertical="10dp"
                            app:cardMaxElevation="10dp"
                            android:layout_marginHorizontal="20dp"
                            app:cardCornerRadius="5dp"
                            android:layout_height="match_parent">
                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:background="@drawable/style_background_btn_off"
                                android:padding="10dp"
                                android:layout_height="wrap_content">
                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/buttonLearnFolder"
                                    android:text="@string/eleanFollowTopic"
                                    android:background="@color/transparent"
                                    android:textColor="@color/black"
                                    android:layout_weight="1"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"/>
                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:id="@+id/buttonImageLearnTopic"
                                    android:layout_width="wrap_content"
                                    android:src="@drawable/ic_blue_next"
                                    android:layout_height="wrap_content"/>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            app:cardElevation="10dp"
                            app:cardMaxElevation="10dp"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginVertical="10dp"
                            app:cardCornerRadius="5dp"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:background="@drawable/style_background_btn_off"
                                android:padding="10dp"
                                android:layout_height="wrap_content">
                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/buttonExplore"
                                    android:text="Khám phá thêm"
                                    android:background="@color/transparent"
                                    android:textColor="@color/black"
                                    android:layout_weight="1"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"/>
                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:id="@+id/buttonImage"
                                    android:layout_width="wrap_content"
                                    android:src="@drawable/ic_violet_next"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="20sp"
                            android:text="@string/hint"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_marginVertical="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>
                        <TextView
                            android:textSize="15sp"
                            android:text="@string/rankOfTopic"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_marginTop="8dp"
                            android:id="@+id/recycleViewHintTopic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="20sp"
                            android:text="@string/community"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_marginVertical="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_marginTop="8dp"
                            android:id="@+id/recycleViewCommunity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </RelativeLayout>

</layout>